# evo

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  _config.yml  log.txt  out.elf  sob  xmake.lua
bind/: Makefile
doc/: a64.groups  cpu.h  evo-assmble.md  evo-decode.md  evo-design.md  evo-ir.md  evo-scope.md  evo.drawio  ir.drawio  qemu-tcg.md
docs/: Makefile  evo-bind.html  evo-bind.md  evo-design.md  evo-earlyexit.md  evo-mdl.html  evo-mdl.md  evo-op.html  evo-op.md  evo-opt.html  evo-opt.md  evo-paper-big.md  evo-paper-little.md  evo-paper.md  evo-profile.md  evo-quant.md  evo-ref.html  evo-ref.md  evo-tool.md  index.html  index.md  op-pool.html  op-pool.md  ppt-01.html  ppt-01.md  ppt-02.html  ppt-02.md  ppt-03.md  ppt-04.html  ppt-04.md  ppt-05.html  ppt-05.md  ppt-06.html  ppt-06.md
evo/: context.c  device.c  evo.h  graph.c  internal.c  lock.h  log.h  map.c  map.h  math.h  node.c  op.c  resolver.c  resolver.h  scheduler.c  serializer.c  sys.c  sys.h  tensor.c  vec.c  vec.h
include/: config.h  evo.h
src/: Makefile  evo  evo.c  main.rs
sub/flatcc/metas/etm/: CMakeLists.txt  build.sh  etm.fbs
test/: Makefile  armdef_tests  armdef_tests.c  cpu_tests  cpu_tests.c  demo_04.ec  eirdef_tests.c  hello  hello.c  hello.elf  hello_i386.elf  hello_rv32.elf  host_tests.c  huhu_tests  huhu_tests.c  minunit.h  runtests.sh  rvdec_tests  rvdec_tests.c  rvdef_tests  rvdef_tests.c  task_tests  task_tests.c  temp_tests  trans_tests.c  val_tests  val_tests.c  x86def_tests.c
tests/: Makefile  alexnet_tests.c  aware_tests.c  bare.ld  bare_tests.c  bare_tests.hex  (+23 more)
(+562 files in other folders)
